updating file removal

--- a/src/ResourceManager/Sql/Commands.Sql.Tests/Commands.Sql.Tests.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql.Tests/Commands.Sql.Tests.csproj
@@ -185,10 +185,7 @@
     <None Include="ScenarioTests\Common.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Templates\cmdlet-test-env-setup1.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Templates\cmdlet-test-env-setup.json">
+    <None Include="Templates\sql-audit-test-env-setup.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
