--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -4,6 +4,7 @@
   ToolsVersion="4.0">
   <PropertyGroup>
     <TestSettings>.\src\Local.testsettings</TestSettings>
+    <TestSettings_x64>.\src\Local.x64.testsettings</TestSettings_x64>
     <ScenarioTestDebug>.\src\Common\Commands.ScenarioTest\bin\Debug\Microsoft.WindowsAzure.Commands.ScenarioTest.dll</ScenarioTestDebug>
 	<CommonTestDebug>.\src\Common\Commands.Common.Test\bin\Debug\Microsoft.WindowsAzure.Commands.Common.Test.dll</CommonTestDebug>
     <AzureRTTestSettings>.\src\AzureRT.testsettings</AzureRTTestSettings>
@@ -243,5 +244,15 @@
       Command="MSTest.exe /testcontainer:$(AzureRTTestContainer) /testsettings:$(AzureRTTestSettings) /category:Preview /resultsfile:$(TestOutputDirectory)\RTPreviewDebug.trx"
       ContinueOnError="false" />
   </Target>
+
+  <!-- DSC extension related targets -->
+  <Target Name="TestDSCExtension">
+    <Message Importance="high" Text="Running DSC extension BVT tests..." />
+    <Delete Files="$(TestOutputDirectory)\DSCExtensionDebug.trx" />
+    <Exec
+      Command="MSTest.exe /testcontainer:$(AzureRTTestContainer) /test:VirtualMachineDscExtensionTests /testsettings:$(TestSettings_x64) /category:Scenario /resultsfile:$(TestOutputDirectory)\DSCExtensionDebug.trx"
+      ContinueOnError="false" />
+  </Target>
+
 </Project>
 
