--- a/src/.nuget/NuGet.Config
+++ b/src/.nuget/NuGet.Config
@@ -1,9 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <solution>
-    <add key="disableSourceControlIntegration" value="true" />
-  </solution>
-  <activePackageSource>
-    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
-  </activePackageSource>
-</configuration>
+ <configuration>
+	<packageSources>
+		<add key="azure sdk internal" value="https://www.myget.org/F/azure-sdk-internal/" />
+		<add key="myfeed.org Hydra" value="https://www.myget.org/F/hydra/" />
+		<add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+		<add key="local" value="C:\NuGet" />
+	</packageSources>
+	<activePackageSource>
+		<add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+		<add key="All" value="(Aggregate source)" />
+	</activePackageSource>
+	<packageSourceCredentials>
+		<myfeed.org_x0020_Hydra>
+			<add key="Username" value="yoavrubin" />
+			<add key="ClearTextPassword" value="XXXXX" />
+		</myfeed.org_x0020_Hydra>
+	</packageSourceCredentials>
+	<solution>
+		<add key="disableSourceControlIntegration" value="true" />
+	</solution>
+ </configuration>
