--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -104,10 +104,13 @@
     <Compile Include="DataFactories\RemoveAzureDataFactoryCommand.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\CreatePSTableParameters.cs" />
     <Compile Include="Models\CreatePSLinkedServiceParameters.cs" />
     <Compile Include="LinkedServices\GetAzureDataFactoryLinkedServiceCommand.cs" />
     <Compile Include="LinkedServices\LinkedServiceContextBaseCmdlet.cs" />
+    <Compile Include="Models\DataFactoryClient.Tables.cs" />
     <Compile Include="Models\DataFactoryClientExtensions.cs" />
+    <Compile Include="Models\TableFilterOptions.cs" />
     <Compile Include="Models\LinkedServiceFilterOptions.cs" />
     <Compile Include="LinkedServices\NewAzureDataFactoryLinkedServiceCommand.cs" />
     <Compile Include="LinkedServices\RemoveAzureDataFactoryLinkedServiceCommand.cs" />
@@ -123,12 +126,17 @@
     <Compile Include="Models\DataFactoryFilterOptions.cs" />
     <Compile Include="Models\PSDataFactory.cs" />
     <Compile Include="Models\PSLinkedService.cs" />
+    <Compile Include="Models\PSTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Tables\GetAzureDataFactoryTableCommand.cs" />
+    <Compile Include="Tables\NewAzureDataFactoryTableCommand.cs" />
+    <Compile Include="Tables\RemoveAzureDataFactoryTableCommand.cs" />
+    <Compile Include="Tables\TableContextBaseCmdlet.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Commands.Common.Storage\Commands.Common.Storage.csproj">
