--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -104,9 +104,13 @@
     <Compile Include="DataFactories\RemoveAzureDataFactoryCommand.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Gateway\GetAzureDataFactoryGatewayCommand.cs" />
+    <Compile Include="Gateway\NewAzureDataFactoryGatewayCommand.cs" />
+    <Compile Include="Gateway\RemoveAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Models\CreatePSLinkedServiceParameters.cs" />
     <Compile Include="LinkedServices\GetAzureDataFactoryLinkedServiceCommand.cs" />
     <Compile Include="LinkedServices\LinkedServiceContextBaseCmdlet.cs" />
+    <Compile Include="Models\DataFactoryClient.Gateway.cs" />
     <Compile Include="Models\DataFactoryClientExtensions.cs" />
     <Compile Include="Models\LinkedServiceFilterOptions.cs" />
     <Compile Include="LinkedServices\NewAzureDataFactoryLinkedServiceCommand.cs" />
@@ -122,6 +126,7 @@
     <Compile Include="Models\DataFactoryParametersBase.cs" />
     <Compile Include="Models\DataFactoryFilterOptions.cs" />
     <Compile Include="Models\PSDataFactory.cs" />
+    <Compile Include="Models\PSDataFactoryGateway.cs" />
     <Compile Include="Models\PSLinkedService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
