--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -218,6 +218,10 @@
       <Project>{c60342b1-47d3-4a0e-8081-9b97ce60b7af}</Project>
       <Name>Commands.Profile</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\RedisCache\Commands.RedisCache\Commands.RedisCache.csproj">
+      <Project>{c972e3ef-4461-4758-ba31-93e0947b1253}</Project>
+      <Name>Commands.RedisCache</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Sql\Commands.Sql\Commands.Sql.csproj">
       <Project>{69ed499e-6f3c-488f-86b8-b74cfda4d47e}</Project>
       <Name>Commands.Sql</Name>
