Add New-AzureDataFactoryGatewayKey and Set-AzureDataFactoryGateway cmdlets a) Add two Azure data factory gateway related cmdlets:    New-AzureDataFactoryGatewayKey is for creating a gateway key for a specific gateway.    Set-AzureDataFactoryGateway is for updating the Gateway properties. In current stage, it only supports updating description. b) Add unit test and mock tests. c) Add the help contents.

--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -106,7 +106,9 @@
     </Compile>
     <Compile Include="Gateway\GetAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Gateway\NewAzureDataFactoryGatewayCommand.cs" />
+    <Compile Include="Gateway\NewAzureDataFactoryGatewayKeyCommand.cs" />
     <Compile Include="Gateway\RemoveAzureDataFactoryGatewayCommand.cs" />
+    <Compile Include="Gateway\SetAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Models\CreatePSLinkedServiceParameters.cs" />
     <Compile Include="LinkedServices\GetAzureDataFactoryLinkedServiceCommand.cs" />
     <Compile Include="LinkedServices\LinkedServiceContextBaseCmdlet.cs" />
@@ -114,6 +116,7 @@
     <Compile Include="Models\CreatePSTableParameters.cs" />
     <Compile Include="Models\DataFactoryClient.Tables.cs" />
     <Compile Include="Models\DataFactoryClientExtensions.cs" />
+    <Compile Include="Models\PSDataFactoryGatewayKey.cs" />
     <Compile Include="Models\TableFilterOptions.cs" />
     <Compile Include="Models\LinkedServiceFilterOptions.cs" />
     <Compile Include="LinkedServices\NewAzureDataFactoryLinkedServiceCommand.cs" />
