--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -104,16 +104,27 @@
     <Compile Include="DataFactories\RemoveAzureDataFactoryCommand.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DataSlices\DataSliceContextBaseCmdlet.cs" />
+    <Compile Include="DataSlices\GetAzureDataFactoryRunCommand.cs" />
+    <Compile Include="DataSlices\GetAzureDataFactorySliceCommand.cs" />
+    <Compile Include="DataSlices\SetAzureDataFactorySliceStatusCommand.cs" />
     <Compile Include="Gateway\GetAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Gateway\NewAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Gateway\RemoveAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Models\CreatePSLinkedServiceParameters.cs" />
     <Compile Include="LinkedServices\GetAzureDataFactoryLinkedServiceCommand.cs" />
     <Compile Include="LinkedServices\LinkedServiceContextBaseCmdlet.cs" />
+    <Compile Include="Models\CreatePSPipelineParameters.cs" />
+    <Compile Include="Models\DataFactoryClient.DataSlices.cs" />
     <Compile Include="Models\DataFactoryClient.Gateway.cs" />
     <Compile Include="Models\CreatePSTableParameters.cs" />
     <Compile Include="Models\DataFactoryClient.Tables.cs" />
     <Compile Include="Models\DataFactoryClientExtensions.cs" />
+    <Compile Include="Models\PipelineFilterOptions.cs" />
+    <Compile Include="Models\PSDataSlice.cs" />
+    <Compile Include="Models\PSDataSliceRun.cs" />
+    <Compile Include="Models\PSPipeline.cs" />
+    <Compile Include="Models\PSRunLogInfo.cs" />
     <Compile Include="Models\TableFilterOptions.cs" />
     <Compile Include="Models\LinkedServiceFilterOptions.cs" />
     <Compile Include="LinkedServices\NewAzureDataFactoryLinkedServiceCommand.cs" />
@@ -132,6 +143,13 @@
     <Compile Include="Models\PSDataFactoryGateway.cs" />
     <Compile Include="Models\PSLinkedService.cs" />
     <Compile Include="Models\PSTable.cs" />
+    <Compile Include="Pipelines\GetAzureDataFactoryPipelineCommand.cs" />
+    <Compile Include="Pipelines\NewAzureDataFactoryPipelineCommand.cs" />
+    <Compile Include="Pipelines\PipelineContextBaseCmdlet.cs" />
+    <Compile Include="Pipelines\RemoveAzureDataFactoryPipelineCommand.cs" />
+    <Compile Include="Pipelines\ResumeAzureDataFactoryPipelineCommand.cs" />
+    <Compile Include="Pipelines\SetAzureDataFactoryPipelineActivePeriodCommand.cs" />
+    <Compile Include="Pipelines\SuspendAzureDataFactoryPipelineCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -162,6 +180,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Compile Include="Models\DataFactoryClient.Pipelines.cs" />
     <None Include="MSSharedLibKey.snk" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
